added vertical-align to jinja template to align cell text to top

--- a/templates/jinja/product_desc_comparison.html
+++ b/templates/jinja/product_desc_comparison.html
@@ -16,6 +16,7 @@
         }
 
         .table-cell {
+            vertical-align: top;
             border: 1px solid #231313;
             padding: 5px;
             color: black;
