--- a/common/templates/product_info_comparison_jinja_template.html
+++ b/common/templates/product_info_comparison_jinja_template.html
@@ -21,6 +21,11 @@
             padding: 5px;
             color: black;
         }
+
+        .table-cell.red {
+            background-color: lightcoral;
+            color: white;
+        }
     </style>
 </head>
 
@@ -36,38 +41,50 @@
             <th class="table-title">Hepsiburada</th>
         </tr>
         <tr>
-            <td class="table-cell">
-                {%- if product["omniens_name"] -%}
+            <td class="table-cell {{'red' if product['omniens_error']}}" rowspan="{{'2' if product['omniens_error'] else '1' }}">
+                {%- if product["omniens_error"] -%}
+                {{ product["omniens_error"] }}
+                {%- elif product["omniens_name"] -%}
                 {{ product["omniens_name"] }}
                 {%- endif -%}
             </td>
-            <td class="table-cell">
-                {%- if product["trendyol_name"] -%}
+            <td class="table-cell {{'red' if product['trendyol_error']}}" rowspan="{{'2' if product['trendyol_error'] else '1' }}">
+                {%- if product["trendyol_error"] -%}
+                {{ product["trendyol_error"] }}
+                {%- elif product["trendyol_name"] -%}
                 {{ product["trendyol_name"] }}
                 {%- endif -%}
             </td>
-            <td class="table-cell">
-                {%- if product["hepsiburada_name"] -%}
+            <td class="table-cell {{'red' if product['hepsiburada_error']}}" rowspan="{{'2' if product['hepsiburada_error'] else '1' }}">
+                {%- if product["hepsiburada_error"] -%}
+                {{ product["hepsiburada_error"] }}
+                {%- elif product["hepsiburada_name"] -%}
                 {{ product["hepsiburada_name"] }}
                 {%- endif -%}
             </td>
         </tr>
         <tr>
+            {%- if not product["omniens_error"] -%}
             <td class="table-cell">
                 {%- if product["omniens_desc"] -%}
                 {{ product["omniens_desc"] }}
                 {%- endif -%}
             </td>
+            {%- endif -%}
+            {%- if not product["trendyol_error"] -%}
             <td class="table-cell">
                 {%- if product["trendyol_desc"] -%}
                 {{ product["trendyol_desc"] }}
                 {%- endif -%}
             </td>
+            {%- endif -%}
+            {%- if not product["hepsiburada_error"] -%}
             <td class="table-cell">
                 {%- if product["hepsiburada_desc"] -%}
                 {{ product["hepsiburada_desc"] }}
                 {%- endif -%}
             </td>
+            {%- endif -%}
         </tr>
     </table>
     {%- endfor -%}
